# kserve-models

./: .gitignore  README.md
bge-embeddings/: inference.yaml  model.py  pyproject.toml  schemas.py
bge-embeddings-cog/: cog.yaml  predict.py
